--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,9 +8,10 @@
 
     //mobile
 	@media @mobile{
-        height: 200px;
+        height: 150px;
         flex-direction: column;
-        //.border1()
+        //.border1();
+        //margin-bottom: 50px;
 	}
 
 
@@ -22,6 +23,7 @@
         //mobile
         @media @mobile{
             width: 100%;
+            height: 80px;
             justify-content: center;
         }//media
 
@@ -43,6 +45,7 @@
             width: 100%;
             justify-content: space-around;
             margin: 0% 0%;
+            height: 30px;
         }//media
 
         a{
@@ -51,6 +54,8 @@
             padding: 40px 0%;
             font-size: 2rem;
            //.border2();
+
+           
         }
     }
 }
